gatekeeper/constraints/disallow-host-network.yaml
# chặn Pod bật hostNetwork: true
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostNetwork
      validation:
        openAPIV3Schema:
          type: object
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowhostnetwork

      violation[{"msg": msg}] {
        input.review.object.spec.hostNetwork == true
        msg := "hostNetwork must not be true"
      }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowHostNetwork
metadata:
  name: disallow-host-network
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
    - kube-system
    - argocd
    - argo-rollouts
    - monitoring
    - gatekeeper-system
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
